[project]
name = "react-search-agent"
version = "0.1.0"
description = "ReAct-style agent using Tavily search and Groq LLMs"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "langchain~=1.2.1",
    "langchain-core~=1.2.6",
    "langchain-groq>=1.1.1",
    "langchain-tavily>=0.2.16",
    "python-dotenv>=1.2.1",
    "black>=24.10.0",
    "isort>=7.0.0",
]
