[project]
name = "search-agent"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

dependencies = [
    "black",
    "isort",
    "langchain==0.1.16",
    "langchain-core==0.1.48",
    "langchain-community==0.0.36",
    "langchain-groq",
    "python-dotenv",
    "streamlit",
    "tavily-python",
]
